--- a/_posts/2016-8-23-magna.md
+++ b/_posts/2016-8-23-magna.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Magna
-description: Lorem etiam nullam
-image: assets/images/pic03.jpg
+title: View
+description: beautiful memory
+image: assets/images/IMG_6505.jpg
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
