--- a/_posts/2016-8-24-tempus.md
+++ b/_posts/2016-8-24-tempus.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Tempus
+title: Child
 description: Feugiat amet tempus
-image: assets/images/pic02.jpg
+image: assets/images/IMG_4575.jpg
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
