--- a/_posts/2016-8-24-tempus.md
+++ b/_posts/2016-8-24-tempus.md
@@ -2,7 +2,7 @@
 layout: post
 title: tempus
 description: Feugiat amet tempus
-image: assets/images/IMG_4575.jpg
+image: assets/images/IMG_4575.JPG
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
