--- a/_posts/2016-8-25-aliquam.md
+++ b/_posts/2016-8-25-aliquam.md
@@ -2,7 +2,7 @@
 layout: post
 title: aliquam
 description: Ipsum dolor sit amet
-image: assets/images/IMG_3689.jpg
+image: assets/images/pic02.JPG
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
