--- a/_posts/2016-8-23-magna.md
+++ b/_posts/2016-8-23-magna.md
@@ -2,7 +2,7 @@
 layout: post
 title: magna
 description: beautiful memory
-image: assets/images/pic03.jpg
+image: assets/images/IMG_4575.JPG
 ---
 
 Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. 
