--- a/_posts/2016-8-25-day.md
+++ b/_posts/2016-8-25-day.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: aliquam
-description: Ipsum dolor sit amet
+title: day
+description: view
 image: assets/images/pic02.jpg
 ---
 
